--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -739,7 +739,7 @@
     color: #fff;
 }
 .kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
-    border: 1px solid #1a2f24;
+    border-color: #1a2f24;
 }
 
 /* If the user clicks on their avatar we 'open' the settings */
@@ -1124,7 +1124,7 @@
 }
 
 .kiwi-awaystatusindicator {
-    border: 1px solid #e1e1e1;
+    border: #1a2f24;
     background-color: #5dd895;
 }
 
