- Updated border for awayStatusIndicator in themes - Removed background from controlInput container from some themes

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -1048,7 +1048,7 @@
 }
 
 .kiwi-awaystatusindicator {
-    border: 1px solid #e1e1e1;
+    border: 1px solid #fff;
     background-color: #42b992;
 }
 
