--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -326,7 +326,6 @@
 
 /* Control Input - displayed at bottom of Kiwi ( ControlInput.vue ) */
 .kiwi-controlinput {
-    background: #efefef;
     border-top: 1px solid #e8e8e8;
     color: #272727;
 }
@@ -719,7 +718,7 @@
     color: #fff;
 }
 .kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
-    border-color: #94e5f7;
+    border-color: #6cc3d8;
 }
 
 /* If the user clicks on their avatar we 'open' the settings */
@@ -1060,7 +1059,7 @@
 }
 
 .kiwi-awaystatusindicator {
-    border: 1px solid #e1e1e1;
+    border: 1px solid #fff;
     background-color: #42b992;
 }
 
