Update away status indicator border (#836)
* - Make the CSS selector for the 'disconnected' bar at the top, more specific

* - Change background colour of the avatar in statebrowser for some themes
- Change the border colour for the away Status Indicator in the statebrowser for all themes

* - Restore config

* - Add border to awayStatusComponent
- Change border to border-color in all themes

* - RESET CONFIG

* - Updated border for awayStatusIndicator in themes
- Removed background from controlInput container from some themes

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -53,7 +53,7 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after {
+.kiwi-workspace--disconnected::after {
     background: #bf5155;
 }
 
@@ -331,7 +331,6 @@
 
 /* Control Input - displayed at bottom of Kiwi ( ControlInput.vue ) */
 .kiwi-controlinput {
-    background: #efefef;
     border-top: 1px solid #e8e8e8;
     color: #272727;
 }
@@ -706,12 +705,15 @@
 }
 
 .kiwi-statebrowser-usermenu-avatar {
-    background-color: #000;
+    background-color: #7d6859;
     color: #fff;
 }
 .kiwi-statebrowser-usermenu-avatar:hover {
     background-color: #8e715c;
     color: #fff;
+}
+.kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
+    border-color: #8e715b;
 }
 
 .kiwi-aboutbuffer {
@@ -1100,7 +1102,7 @@
 }
 
 .kiwi-awaystatusindicator {
-    border: 1px solid #e1e1e1;
+    border-color: #fff;
     background-color: #42b992;
 }
 
