--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -70,7 +70,7 @@
 .kiwi-workspace::before {
     background: #42b992;
 }
-.kiwi-workspace::after {
+.kiwi-workspace--disconnected::after {
     background: #bf5155;
 }
 
@@ -789,12 +789,15 @@
 }
 
 .kiwi-statebrowser-usermenu-avatar {
-    background-color: #999;
+    background-color: #000;
     color: #d8d8d8;
 }
 .kiwi-statebrowser-usermenu-avatar:hover {
     background-color: #ddd;
     color: #fff;
+}
+.kiwi-statebrowser-usermenu .kiwi-awaystatusindicator {
+    border-color: #000;
 }
 
 /* If the user clicks on their avatar we 'open' the settings */
@@ -1193,8 +1196,8 @@
 }
 
 .kiwi-awaystatusindicator {
-    border: 1px solid #e1e1e1;
-    background-color: #135f46;
+    border-color: #000;
+    background-color: #3bba91;
 }
 
 .kiwi-awaystatusindicator--away {
